--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,19 @@
     <%= javascript_include_tag 'bootstrap', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <%= yield %>
-    <h1 style="margin-left:40%;">Флэшкарточкер</h1>
-      <ul class="nav nav-pills">
-        <li class="active" style="margin-left:40%;"><a href="#">Все карточки</a></li>
-        <li class="active" style="margin-right:40%;"><a href="#">Добавить карточку</a></li>
-      </ul>
+      <div class="container" style="margin-top: 80px; "  >
+        <header>
+          <h1 style="margin-left:38%;">Флэшкарточкер</h1>
+        </header>
+      </div>
+      <div class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar-inner">
+          <ul class="pager">
+            <li><%= link_to "Все Карточки", cards_path %></li>
+            <li><a href="#">Добавить карточку</a></li>
+          </ul>
+        </nav>
+      </div> 
+  <%= yield %> 
   </body>
 </html>
