--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,10 +1,1 @@
-<p style="margin-left: 1%;">Список всех карточек</p>
-<ul class="cards">
-  <% @cards.each do |card| %>
-    <li>
-      <%=  card.original_text %>
-      <%=  card.translated_text %>
-      <%=  card.review_date.strftime("%m/%d/%Y") %>
-    </li>
-  <% end %>
-</ul>
+ <%= @card.original_text %>, <%= @card.translated_text %>, <%= @card.review_date %>
