--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,5 +1,6 @@
 <h4>Редактирование карточки</h4>
 <%= Date.today.next_day(3) %> 
+<%= render 'shared/error_messages' %>
 <%= simple_form_for :card, url: cards_path do |f| %>
   <%= f.input :original_text, :label => "original text" %>
   <%= f.input :translated_text, :label => "translated text" %>
