--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,14 +1,9 @@
 <h4>Редактирование карточки</h4>
-<%= Date.today.next_day(3) %> 
 <%= render 'shared/error_messages' %>
 <%= simple_form_for :card, url: cards_path do |f| %>
   <%= f.input :original_text, :label => "original text" %>
   <%= f.input :translated_text, :label => "translated text" %>
-  <%= f.input :review_date, as: :date, start_year: Date.today.year - 90,
-                                       end_year: Date.today.year + 90, 
-                                       month: Date.today.month, 
-                                       day: Date.today.day, 
-                                       order: [:day, :month, :year] %><br>
+  <%= f.input :review_date, :label => "review_date" %><br>
   <%= f.button :submit %> 
 <% end %>
 
