problem - undefined method ..._text' for nil:NilClass

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,5 +2,4 @@
     Первый в мире удобный менеджер флеш-карточек. Именно так.
 </p>
 
- 
-
+ <%= @card.original_text %>, <%= @card.translated_text %>, <%= @card.review_date %>
